SERVER-21104 WiredTiger no longer compiles on non-x86 platforms